// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RichTextElement/> Complex rich-text value - render properly no resolution 1`] = `
Array [
  <p>
    This is Ondřej Chrastina - Developer Advocate with 
    <a
      data-new-window="true"
      href="https://kontent.ai"
      rel="noopener noreferrer"
      target="_blank"
    >
      Kentico Kontent
    </a>
    .
  </p>,
  "
",
  <figure
    data-asset-id="d32b8ad5-0cf4-47a8-8b53-ed4a1e80dc88"
    data-image-id="d32b8ad5-0cf4-47a8-8b53-ed4a1e80dc88"
  >
    <img
      alt=""
      data-asset-id="d32b8ad5-0cf4-47a8-8b53-ed4a1e80dc88"
      data-image-id="d32b8ad5-0cf4-47a8-8b53-ed4a1e80dc88"
      src="https://assets-us-01.kc-usercontent.com:443/0fe3ab32-97a8-005d-6928-eda983ea70a5/44299668-b37b-4224-a115-1fd66f7d7b36/Yprofile.jpg"
    />
  </figure>,
  "
",
  <p>
    He likes to do web sites. This is his latest project:
  </p>,
  "
",
  <object
    data-codename="ondrej_chrastina_tech"
    data-rel="link"
    data-type="item"
    type="application/kenticocloud"
  />,
  "
",
  <p>
    <br />
    
He also likes OSS. This is his latest repository:
  </p>,
  "
",
  <object
    data-codename="simply007_kontent_gatsby_benchmark"
    data-rel="link"
    data-type="item"
    type="application/kenticocloud"
  />,
  "
",
  <p>
    <br />
    
On some projects, he was cooperating with 
    <a
      data-item-id="2b805947-7ca5-4e6a-baa5-734a91f3cfa2"
      href=""
    >
      John Doe
    </a>
    .
  </p>,
  "
",
  <p>
    You could take a look at their 
    <a
      href="https://google.com"
      title="sample link"
    >
      latest project
    </a>
    .
  </p>,
  "
",
  <table>
    <tbody>
      
  
      <tr>
        <td>
          col1
        </td>
        <td>
          col2
        </td>
      </tr>
      
  
      <tr>
        <td>
          data1
        </td>
        <td>
          data2
        </td>
      </tr>
      
  
      <tr>
        <td>
          data3
        </td>
        <td>
          data4
        </td>
      </tr>
      

    </tbody>
  </table>,
]
`;

exports[`<RichTextElement/> Empty rich-text value - render properly 1`] = `
<p>
  <br />
</p>
`;

exports[`<RichTextElement/> Resolve geneal node - wrap table element 1`] = `
Array [
  <p>
    This is Ondřej Chrastina - Developer Advocate with 
    <a
      data-new-window="true"
      href="https://kontent.ai"
      rel="noopener noreferrer"
      target="_blank"
    >
      Kentico Kontent
    </a>
    .
  </p>,
  "
",
  <figure
    data-asset-id="d32b8ad5-0cf4-47a8-8b53-ed4a1e80dc88"
    data-image-id="d32b8ad5-0cf4-47a8-8b53-ed4a1e80dc88"
  >
    <img
      alt=""
      data-asset-id="d32b8ad5-0cf4-47a8-8b53-ed4a1e80dc88"
      data-image-id="d32b8ad5-0cf4-47a8-8b53-ed4a1e80dc88"
      src="https://assets-us-01.kc-usercontent.com:443/0fe3ab32-97a8-005d-6928-eda983ea70a5/44299668-b37b-4224-a115-1fd66f7d7b36/Yprofile.jpg"
    />
  </figure>,
  "
",
  <p>
    He likes to do web sites. This is his latest project:
  </p>,
  "
",
  <object
    data-codename="ondrej_chrastina_tech"
    data-rel="link"
    data-type="item"
    type="application/kenticocloud"
  />,
  "
",
  <p>
    <br />
    
He also likes OSS. This is his latest repository:
  </p>,
  "
",
  <object
    data-codename="simply007_kontent_gatsby_benchmark"
    data-rel="link"
    data-type="item"
    type="application/kenticocloud"
  />,
  "
",
  <p>
    <br />
    
On some projects, he was cooperating with 
    <a
      data-item-id="2b805947-7ca5-4e6a-baa5-734a91f3cfa2"
      href=""
    >
      John Doe
    </a>
    .
  </p>,
  "
",
  <p>
    You could take a look at their 
    <a
      href="https://google.com"
      title="sample link"
    >
      latest project
    </a>
    .
  </p>,
  "
",
  <div
    className="table-wrapper"
  >
    <table>
      <tbody>
        
  
        <tr>
          <td>
            col1
          </td>
          <td>
            col2
          </td>
        </tr>
        
  
        <tr>
          <td>
            data1
          </td>
          <td>
            data2
          </td>
        </tr>
        
  
        <tr>
          <td>
            data3
          </td>
          <td>
            data4
          </td>
        </tr>
        

      </tbody>
    </table>
  </div>,
]
`;

exports[`<RichTextElement/> Resolve images 1`] = `
Array [
  <p>
    This is Ondřej Chrastina - Developer Advocate with 
    <a
      data-new-window="true"
      href="https://kontent.ai"
      rel="noopener noreferrer"
      target="_blank"
    >
      Kentico Kontent
    </a>
    .
  </p>,
  "
",
  <img
    src="https://assets-us-01.kc-usercontent.com:443/0fe3ab32-97a8-005d-6928-eda983ea70a5/44299668-b37b-4224-a115-1fd66f7d7b36/Yprofile.jpg"
    width="200"
  />,
  "
",
  <p>
    He likes to do web sites. This is his latest project:
  </p>,
  "
",
  <object
    data-codename="ondrej_chrastina_tech"
    data-rel="link"
    data-type="item"
    type="application/kenticocloud"
  />,
  "
",
  <p>
    <br />
    
He also likes OSS. This is his latest repository:
  </p>,
  "
",
  <object
    data-codename="simply007_kontent_gatsby_benchmark"
    data-rel="link"
    data-type="item"
    type="application/kenticocloud"
  />,
  "
",
  <p>
    <br />
    
On some projects, he was cooperating with 
    <a
      data-item-id="2b805947-7ca5-4e6a-baa5-734a91f3cfa2"
      href=""
    >
      John Doe
    </a>
    .
  </p>,
  "
",
  <p>
    You could take a look at their 
    <a
      href="https://google.com"
      title="sample link"
    >
      latest project
    </a>
    .
  </p>,
  "
",
  <table>
    <tbody>
      
  
      <tr>
        <td>
          col1
        </td>
        <td>
          col2
        </td>
      </tr>
      
  
      <tr>
        <td>
          data1
        </td>
        <td>
          data2
        </td>
      </tr>
      
  
      <tr>
        <td>
          data3
        </td>
        <td>
          data4
        </td>
      </tr>
      

    </tbody>
  </table>,
]
`;

exports[`<RichTextElement/> Resolve linked items 1`] = `
Array [
  <p>
    This is Ondřej Chrastina - Developer Advocate with 
    <a
      data-new-window="true"
      href="https://kontent.ai"
      rel="noopener noreferrer"
      target="_blank"
    >
      Kentico Kontent
    </a>
    .
  </p>,
  "
",
  <figure
    data-asset-id="d32b8ad5-0cf4-47a8-8b53-ed4a1e80dc88"
    data-image-id="d32b8ad5-0cf4-47a8-8b53-ed4a1e80dc88"
  >
    <img
      alt=""
      data-asset-id="d32b8ad5-0cf4-47a8-8b53-ed4a1e80dc88"
      data-image-id="d32b8ad5-0cf4-47a8-8b53-ed4a1e80dc88"
      src="https://assets-us-01.kc-usercontent.com:443/0fe3ab32-97a8-005d-6928-eda983ea70a5/44299668-b37b-4224-a115-1fd66f7d7b36/Yprofile.jpg"
    />
  </figure>,
  "
",
  <p>
    He likes to do web sites. This is his latest project:
  </p>,
  "
",
  <pre>
    {
  "__typename": "kontent_item_website",
  "system": {
    "codename": "ondrej_chrastina_tech"
  },
  "elements": {
    "name": {
      "value": "ondrej.chrastina.tech"
    },
    "slug": {
      "value": "ondrej-chrastina-tech"
    },
    "summary": {
      "value": "Ondřej Chrastina's personal site"
    },
    "url": {
      "value": "https://ondrej.chrastina.tech"
    },
    "source_repository": {
      "value": [
        {
          "__typename": "kontent_item_repository",
          "elements": {
            "slug": {
              "value": "simply007-simply007-github-io"
            }
          }
        }
      ]
    }
  }
}
  </pre>,
  "
",
  <p>
    <br />
    
He also likes OSS. This is his latest repository:
  </p>,
  "
",
  <pre>
    {
  "__typename": "kontent_item_repository",
  "system": {
    "codename": "simply007_kontent_gatsby_benchmark"
  },
  "elements": {
    "name": {
      "value": "Simply007/kontent-gatsby-benchmark"
    },
    "slug": {
      "value": "simply007-kontent-gatsby-benchmark"
    },
    "summary": {
      "value": "Example site for Kontent as a source for \\"Will It Build\\". Should/Will be generalized into e.g. a theme."
    },
    "url": {
      "value": "https://github.com/Simply007/kontent-gatsby-benchmark"
    }
  }
}
  </pre>,
  "
",
  <p>
    <br />
    
On some projects, he was cooperating with 
    <a
      data-item-id="2b805947-7ca5-4e6a-baa5-734a91f3cfa2"
      href=""
    >
      John Doe
    </a>
    .
  </p>,
  "
",
  <p>
    You could take a look at their 
    <a
      href="https://google.com"
      title="sample link"
    >
      latest project
    </a>
    .
  </p>,
  "
",
  <table>
    <tbody>
      
  
      <tr>
        <td>
          col1
        </td>
        <td>
          col2
        </td>
      </tr>
      
  
      <tr>
        <td>
          data1
        </td>
        <td>
          data2
        </td>
      </tr>
      
  
      <tr>
        <td>
          data3
        </td>
        <td>
          data4
        </td>
      </tr>
      

    </tbody>
  </table>,
]
`;

exports[`<RichTextElement/> Resolve links 1`] = `
Array [
  <p>
    This is Ondřej Chrastina - Developer Advocate with 
    <a
      data-new-window="true"
      href="https://kontent.ai"
      rel="noopener noreferrer"
      target="_blank"
    >
      Kentico Kontent
    </a>
    .
  </p>,
  "
",
  <figure
    data-asset-id="d32b8ad5-0cf4-47a8-8b53-ed4a1e80dc88"
    data-image-id="d32b8ad5-0cf4-47a8-8b53-ed4a1e80dc88"
  >
    <img
      alt=""
      data-asset-id="d32b8ad5-0cf4-47a8-8b53-ed4a1e80dc88"
      data-image-id="d32b8ad5-0cf4-47a8-8b53-ed4a1e80dc88"
      src="https://assets-us-01.kc-usercontent.com:443/0fe3ab32-97a8-005d-6928-eda983ea70a5/44299668-b37b-4224-a115-1fd66f7d7b36/Yprofile.jpg"
    />
  </figure>,
  "
",
  <p>
    He likes to do web sites. This is his latest project:
  </p>,
  "
",
  <object
    data-codename="ondrej_chrastina_tech"
    data-rel="link"
    data-type="item"
    type="application/kenticocloud"
  />,
  "
",
  <p>
    <br />
    
He also likes OSS. This is his latest repository:
  </p>,
  "
",
  <object
    data-codename="simply007_kontent_gatsby_benchmark"
    data-rel="link"
    data-type="item"
    type="application/kenticocloud"
  />,
  "
",
  <p>
    <br />
    
On some projects, he was cooperating with 
    <a
      href="/person/john-doe"
    >
      John Doe
    </a>
    .
  </p>,
  "
",
  <p>
    You could take a look at their 
    <a
      href="https://google.com"
      title="sample link"
    >
      latest project
    </a>
    .
  </p>,
  "
",
  <table>
    <tbody>
      
  
      <tr>
        <td>
          col1
        </td>
        <td>
          col2
        </td>
      </tr>
      
  
      <tr>
        <td>
          data1
        </td>
        <td>
          data2
        </td>
      </tr>
      
  
      <tr>
        <td>
          data3
        </td>
        <td>
          data4
        </td>
      </tr>
      

    </tbody>
  </table>,
]
`;

exports[`<RichTextElement/> Resolve links 2`] = `
Array [
  <p>
    This is the page text.
  </p>,
  <ul>
    <li>
      <a
        href="/page/test-nico"
      >
        Test link
      </a>
    </li>
  </ul>,
]
`;
